deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musicee-api-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: musicee-api
  template:
    metadata:
      labels:
        app.kubernetes.io/name: musicee-api
    spec:
      containers:
      - name: musicee-cluster
        image: 110975517810.dkr.ecr.eu-central-1.amazonaws.com/musicee-cloud-api:latest
        ports:
        - containerPort: 8080
