consul-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-ui
  namespace: consul
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-security-groups: sg-0b543f8d870130395
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8500
      protocol: TCP
  selector:
    app: consul
    component: server
