service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "musicee-cloud-service"
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: musicee-api
